[gd_scene load_steps=6 format=3 uid="uid://dc6uqnex3cn5k"]

[ext_resource type="Script" path="res://ball.gd" id="1_erjvq"]
[ext_resource type="Texture2D" uid="uid://bki32f8lb3ck8" path="res://art/ball.png" id="1_ir60k"]
[ext_resource type="Texture2D" uid="uid://bio8jcsl261co" path="res://art/explosion.png" id="3_n60yd"]

[sub_resource type="SpriteFrames" id="SpriteFrames_acuax"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_ir60k")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_n60yd")
}, {
"duration": 1.0,
"texture": ExtResource("3_n60yd")
}],
"loop": false,
"name": &"explosion",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wwc2q"]
size = Vector2(999.999, 850)

[node name="Ball" type="Area2D" groups=["ball", "friendly"]]
position = Vector2(562, 463)
scale = Vector2(0.04, 0.04)
script = ExtResource("1_erjvq")
metadata/_edit_group_ = true

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_acuax")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.00195312, 0)
shape = SubResource("RectangleShape2D_wwc2q")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
